--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
         column-gap: 0.25rem;
                  justify-content: space-around;
                  justify-items: center;
-                 background: #8b0c38f2;
+                 background: #910d3bf9;
                  width: 100%;
                  height: 70px;
                  object-fit: cover;
@@ -171,7 +171,7 @@
           .myDiv:hover{
             border-bottom: 0.2rem solid #fff;
       color: #fff;
-      transition: 0.15s linear;
+      transition: 0.2s ease-in;
       
           }
 
@@ -194,7 +194,7 @@
           .myDiv1:hover{
       border-bottom: 0.2rem solid #fff;
       color: #fff;
-      transition: 0.15s linear;
+      transition: 0.2s ease-in;
           }
 
           .myDiv2{
@@ -216,7 +216,7 @@
           .myDiv2:hover{
             border-bottom: 0.2rem solid #fff;
       color: #fff;
-      transition: 0.15s linear;
+      transition: 0.2s ease-in;
           }
 
           .myDiv3{
@@ -238,7 +238,7 @@
           .myDiv3:hover{
             border-bottom: 0.2rem solid #fff;
       color: #fff;
-      transition: 0.15s linear;
+      transition: 0.2s ease-in;
           }
 
           .myDiv4{
@@ -260,7 +260,7 @@
           .myDiv4:hover{
             border-bottom: 0.2rem solid #fff;
       color: #fff;
-      transition: 0.15s linear;
+      transition: 0.2s ease-in;
           }
 
           .myDiv5{
@@ -282,7 +282,7 @@
           .myDiv5:hover{
             border-bottom: 0.2rem solid #fff;
       color: #fff;
-      transition: 0.15s linear;
+      transition: 0.2s ease-in;
           }
 
           .myDiv4{
@@ -302,9 +302,9 @@
           }
 
           .myDiv4:hover{
-            border-bottom: 0.2rem solid #fff;
+      border-bottom: 0.2rem solid #fff;
       color: #fff;
-      transition: 0.15s linear;
+      transition: 0.2s ease-in;
           }
 
           .myDiv6{
@@ -326,7 +326,8 @@
           .myDiv6:hover{
             border-bottom: 0.2rem solid #fff;
       color: #fff;
-      transition: 0.15s linear;
+      transition: 0.2s ease-in;
+      
           }
 
           .Unyfy{
@@ -355,7 +356,8 @@
       align-items: center;
       width: 100%;
       height: 55px;
-      background: #efefefc0;    
+      background: #d5d5d5c0;  
+      border-bottom: 0.2rem solid #9e0e408f;  
       color: darkblue;
       font-family: 'Poppins';
       font-size: 1.5rem;
@@ -426,7 +428,7 @@
         flex-direction: column;
         width: 100%;
         height: auto;
-        background: #9e0e4080;
+        background: #9e0e405d;
     }
 
     .content0{
@@ -436,7 +438,7 @@
         justify-items: center;
             width: 100%;
             height: 465px;
-            background: #9e0e4080;
+            background: #9e0e405d;
     }
 
     .KonTenT0{
@@ -505,7 +507,7 @@
             line-height: 21px;
             font-family: 'georgia';
             font-size: 17px;
-            color: #c3c3c3eb;
+            color: #b5b5b5fa;
             background: #9e0e40;
             border-radius: 2rem;
             cursor: pointer;
@@ -541,7 +543,7 @@
             background: transparent;
             width: 100%;
             height: 60px;
-            color: #c3c3c3eb;
+            color: #b5b5b5fa;
             padding: 5px;
             font-family: 'georgia';
             font-size: 18px;
