--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         font-family: 'georgia';
         font-size: 0.76rem;
         color: rgb(219, 166, 32);
-        background: #171717e6;
+        background: #9e0e40f2;
     }
 
     .Welcome{
@@ -142,14 +142,14 @@
         column-gap: 0.25rem;
                  justify-content: space-around;
                  justify-items: center;
-                 background: #910d3bf9;
+                 background: #040404;
                  width: 100%;
                  height: 70px;
                  object-fit: cover;
                  z-index: 1;
                  top: 0;
                  position: sticky;
-                 border-bottom: 0.55rem solid rgb(5, 13, 94);
+                 border-bottom: 0.55rem solid rgb(14, 139, 193);
           }
           
           .myDiv{
