--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
         column-gap: 0.25rem;
                  justify-content: space-around;
                  justify-items: center;
-                 background: #01063a;
+                 background: #000005;
                  width: 100%;
                  height: 70px;
                  object-fit: cover;
