--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
           }
 
           .myDiv:hover{
-            border-bottom: 0.4rem solid #fff;
+            border-bottom: 0.3rem solid #fff;
       color: #fff;
       transition: 0.2s ease-in;
       
@@ -193,8 +193,8 @@
           }
 
           .myDiv1:hover{
-            border-bottom: 0.4rem solid #fff;
-      color: #fff;
+            border-bottom: 0.3rem solid rgb(255, 95, 37);
+      color: rgb(255, 95, 37);
       transition: 0.2s ease-in;
           }
 
@@ -215,8 +215,8 @@
           }
 
           .myDiv2:hover{
-            border-bottom: 0.4rem solid #fff;
-      color: #fff;
+            border-bottom: 0.3rem solid rgb(255, 221, 31);
+      color: rgb(255, 221, 31);
       transition: 0.2s ease-in;
           }
 
@@ -237,8 +237,8 @@
           }
 
           .myDiv3:hover{
-            border-bottom: 0.4rem solid #fff;
-      color: #fff;
+            border-bottom: 0.3rem solid rgb(37, 255, 37);
+      color: rgb(37, 255, 37);
       transition: 0.2s ease-in;
           }
 
@@ -259,8 +259,8 @@
           }
 
           .myDiv4:hover{
-            border-bottom: 0.4rem solid #fff;
-      color: #fff;
+            border-bottom: 0.3rem solid rgb(255, 186, 209);
+      color: rgb(255, 186, 209);
       transition: 0.2s ease-in;
           }
 
@@ -281,8 +281,8 @@
           }
 
           .myDiv5:hover{
-            border-bottom: 0.4rem solid #fff;
-      color: #fff;
+            border-bottom: 0.3rem solid rgb(59, 131, 255);
+      color: rgb(59, 131, 255);
       transition: 0.2s ease-in;
           }
 
@@ -303,8 +303,8 @@
           }
 
           .myDiv4:hover{
-            border-bottom: 0.4rem solid #fff;
-      color: #fff;
+            border-bottom: 0.3rem solid #ff6a9e;
+      color: #ff6a9e;
       transition: 0.2s ease-in;
           }
 
@@ -325,8 +325,8 @@
           }
 
           .myDiv6:hover{
-            border-bottom: 0.4rem solid #fff;
-      color: #fff;
+            border-bottom: 0.3rem solid #1fe5ff;
+      color: #1fe5ff;
       transition: 0.2s ease-in;
       
           }
