--- a/index.html
+++ b/index.html
@@ -150,6 +150,7 @@
                  z-index: 1;
                  top: 0;
                  position: sticky;
+                 border-bottom: 0.55rem solid rgba(13, 69, 255, 0.938);
           }
           
           .myDiv{
@@ -1809,7 +1810,7 @@ font-size: 18px;
     font-size: 13px;
     padding: 2px;
     background: orangered;
-    margin-top: -10px;
+    margin-top: -12px;
     margin-left: 4rem;
     cursor: pointer;
    }
