--- a/index.html
+++ b/index.html
@@ -143,14 +143,14 @@
         column-gap: 0.25rem;
                  justify-content: space-around;
                  justify-items: center;
-                 background: #060d62fe;
+                 background: #0c0657f4;
                  width: 100%;
-                 height: 71.45px;
+                 height: 77px;
                  object-fit: cover;
                  z-index: 1;
                  top: 0;
                  position: sticky;
-                 border-bottom: 0.55rem solid rgba(13, 69, 255, 0.938);
+                 border-bottom: 0.5rem solid rgba(13, 74, 255, 0.981);
           }
           
           .myDiv{
@@ -164,7 +164,7 @@
             font-family: georgia;
             font-size: 16px;
             border: 0.3rem solid transparent;
-            color: #c2c2c2;
+            color: #bbbbbb;
             background: transparent;
           }
 
@@ -186,7 +186,7 @@
             font-family: georgia;
             font-size: 16px;
             border: 0.3rem solid transparent;
-            color: #c2c2c2;
+            color: #bbbbbb;
             background: transparent;
           }
 
@@ -207,7 +207,7 @@
             font-family: georgia;
             font-size: 16px;
             border: 0.3rem solid transparent;
-            color: #c2c2c2;
+            color: #bbbbbb;
             background: transparent;
           }
 
@@ -228,7 +228,7 @@
             font-family: georgia;
             font-size: 16px;
             border: 0.3rem solid transparent;
-            color: #c2c2c2;
+            color: #bbbbbb;
             background: transparent;
           }
 
@@ -249,7 +249,7 @@
             font-family: georgia;
             font-size: 16px;
             border: 0.3rem solid transparent;
-            color: #c2c2c2;
+            color: #bbbbbb;
             background: transparent;
           }
 
@@ -270,7 +270,7 @@
             font-family: georgia;
             font-size: 16px;
             border: 0.3rem solid transparent;
-            color: #c2c2c2;
+            color: #bbbbbb;
             background: transparent;
           }
 
@@ -291,7 +291,7 @@
             font-family: georgia;
             font-size: 16px;
             border: 0.3rem solid transparent;
-            color: #c2c2c2;
+            color: #bbbbbb;
             background: transparent;
           }
 
@@ -312,7 +312,7 @@
             font-family: georgia;
             font-size: 16px;
             border: 0.3rem solid transparent;
-            color: #c2c2c2;
+            color: #bbbbbb;
             background: transparent;
           }
 
@@ -1810,7 +1810,7 @@ font-size: 18px;
     font-size: 13px;
     padding: 2px;
     background: orangered;
-    margin-top: -12px;
+    margin-top: -7px;
     margin-left: 4rem;
     cursor: pointer;
    }
