--- a/index.html
+++ b/index.html
@@ -143,13 +143,14 @@
         column-gap: 0.25rem;
                  justify-content: space-around;
                  justify-items: center;
-                 background: #0a086cf9;
+                 background: #0a086cfd;
                  width: 100%;
                  height: 77px;
                  object-fit: cover;
                  z-index: 1;
                  top: 0;
                  position: sticky;
+                 border-top: 0.2rem solid #07b0ff;
           }
           
           .myDiv{
