--- a/index.html
+++ b/index.html
@@ -1431,8 +1431,10 @@ font-size: 20px;
 }
 
 .FST{
-  border-right: 0.2rem solid #ac1047;
-  padding: 10px;
+  width: 490px;
+  height: auto;
+  border-right: 0.15rem solid #be124e;
+  padding: 2px;
 } 
 
     .FST img{ 
@@ -2585,7 +2587,7 @@ font-size: 18px;
                 <div class="FST">
                   <figure>
                     <img src="https://cdn-icons-png.flaticon.com/512/4762/4762089.png" alt="Food Security">
-                        <figcaption style="color: rgb(3, 213, 255); font-size: 15px; font-family: georgia; margin-top: 5px">Some people are throwing food in the trash and others are starving
+                        <figcaption style="color: rgb(3, 234, 255); font-size: 13px; font-family: georgia; margin-top: 5px">Some people are throwing food in the trash and others are starving
                         </figcaption>
                     </figure>
 
