--- a/index.html
+++ b/index.html
@@ -370,7 +370,7 @@
       justify-items: center;
       width: 100%;
       height: 1130px;
-      background: rgba(188, 227, 253, 0.298);  
+      background: rgba(188, 225, 253, 0.314);  
       color: rgba(111, 111, 111, 0.925);
       font-family: 'helvetica';
       font-weight: bold;
@@ -1762,16 +1762,16 @@ font-size: 19px;
           align-items: center;
           flex-direction: column;
           width: 77%;
-          height: 577px;
-          color: #515151e7; 
+          height: 580px;
+          color: #666565e7; 
           font-family: arial;
           font-size: 21.5px; 
           text-align: justify; 
-          line-height: 31.25px;
+          line-height: 31px;
           padding: 2rem;
           cursor: pointer;
           background: transparent;
-          border: 0.25rem solid #909090d9;
+          border: 0.14rem solid #abababd9;
           border-radius: 0.45rem;
         }
 
@@ -2514,8 +2514,8 @@ font-size: 19px;
               <div class="ViD">
               
                 <h1 style="font-size: 2rem; text-align: left; margin-top: 0.9rem; color: #555454e4;">What it means to live with a disability ?</h1>
-            <p>Living as a disabled person is very challenging. Over the learning side, living as disabled is also teaching in terms of how the courage and the determination of disabled people can inspire, energize and grown hope for people in communities. Sometimes disabled people can unintentionally turn into social barometers - despite the social bareers - and by social interactions they may be able to measure the level and the trending of 
-             certain human values including humility, mutual respect between people, sharing spirit, sensibility, compassion, proactivity and solidarity amongst others. There is no doubt that being disabled is not easy and the issues can vary from person to person and from a region to another.
+            <p>Living as a disabled person is very challenging. Over the learning side that goes with discriminations, living as a disabled may be teaching in terms of how the courage and the determination of disabled people can inspire, energize and bring hope for some normal people. Sometimes disabled people are unintentionally considered to be like social barometers despite social bareers. So with conversations and social interactions they may be able to measure the level and the trending state of 
+             certain human values including humility, mutual respect between people, sharing spirit, sensibility, compassion, proactivity and solidarity amongst others. Being disabled is undoubtly uneasy and the issues can vary from person to person and from a region to another.
                Depending the status and the region of disabled people, will determine the quality and the quantity of their lives experiences. But it's not unknown that the harsh and silent climate of discriminations towards disabled people, is undermining their rights. They have always to deal with unfairness and stigmatisation. It shouldn't. That's why Tiki N'Yiki is created to improve Education and Protect Rights of disabled people especially disabled children.
 
               </p>
